docs: extract tutorial into docs/tutorial.md
Move the getting-started walkthrough out of the README into its own Diátaxis
tutorial file; README keeps a short pointer and the nav map links to it.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>